--- a/3growbox_qtwidget/GrowBoxDesktop/CMakeLists.txt
+++ b/3growbox_qtwidget/GrowBoxDesktop/CMakeLists.txt
@@ -10,11 +10,11 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS
-Widgets 
-Network)
+        Widgets
+        Network)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS 
-Widgets 
-Network)
+        Widgets
+        Network)
 
 set(PROJECT_SOURCES
         main.cpp
@@ -23,11 +23,16 @@ set(PROJECT_SOURCES
         mainwindow.ui
 )
 
+if (WIN32)
+    set(APP_ICON_RESOURCE_WINDOWS "${CMAKE_CURRENT_SOURCE_DIR}/app_icon.rc")
+endif()
+
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(GrowBoxDesktop
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
         resources.qrc
+        ${APP_ICON_RESOURCE_WINDOWS}
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET GrowBoxDesktop APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
